syntax = "proto3";

package internal;

import "google/protobuf/struct.proto";

service Minion {
    rpc PassRule (RuleRequest) returns (RuleResponse) {}
    rpc GetStats (StatsRequest) returns (StatsResponse) {}
}

message RuleRequest {
    google.protobuf.Struct extra = 1;
}

message RuleResponse {
    string status = 1;
}

message StatsRequest {

}

message StatsResponse {

    message Process {
        string Ip = 1;
        int64 Port = 2;
        string State = 3;
        string ProcessName = 4;
        string User = 5;
        string Pid = 6;
        string Proto = 7;
    }

    string message = 1;
    repeated Process processes = 2;
}